--- a/client/app/js/css/style.css
+++ b/client/app/js/css/style.css
@@ -3,6 +3,7 @@
 *after {
     box-sizing: border-box;
 }
+
 form {
     background-color: white;
     border: 1px solid #c6c7ce;
@@ -14,6 +15,7 @@ form {
     width: inherit;
     position: relative;
 }
+
 #groupnav{
    background-color: white;
    height: 370px;
@@ -22,11 +24,13 @@ form {
    overflow: hidden;
    border-radius: 5px;
 }
+
 body{
     background: #293f50;
     color: #888;
     font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 section {
   float: auto; 
   margin: 0 1.5%;
@@ -34,6 +38,7 @@ section {
   text-align: center;
   padding: 0;
 }
+
 h2,header {
     display: block;
     margin: 0;
@@ -48,15 +53,18 @@ input {
     font: 14px/1.4 "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
 }
+
 .account-info {
     padding: 0px;
 }
+
 .account-info label {
     color: #395870;
     display:block;
     font-weight:bold;
     margin-bottom: 20px;
 }
+
 .account-info input {
     background: #fff;
     border: 1px solid #c6c7cc;
@@ -66,11 +74,13 @@ input {
     margin-top: 6px;
     width: 100%;
 }
+
 .account-action {
     background: #f0f0f2;
     border-top: 1px solid #c6c7cc;
     padding: 20px;
 }
+
 .account-action .btn {
     background: linear-gradient(#49708f, #293f50);
     border: 0;
@@ -80,50 +90,62 @@ input {
     float: left;
     padding: 8px 16px;
 }
+
 .account-action label{
     color: #7c7c80;
     font-size: 12px;
     float:left;
     margin: 10px 0 0 20px;
 }
+
 #signup{
     width: 300px;
     margin: 150px auto 0px auto;
 }
+
 #signin{
     width: 300px;
     margin: 150px auto 0px auto;
 }
+
 #messageboard {
     height: 130px;
-    width: 595px;
     margin-top: -435px;
+    width: 595px;
 }
+
 #resetpassword {
     height:120px;
-    width:300px;
-    margin-top:250px;
     margin-left: 500px;
+    margin-top:250px;
+    width:300px;
 }
+
 #signinfieldset {
     margin-top: 40px;
 }
+
 #signupfieldset {
     margin-top: 40px;
 }
+
 #button-segment {
     margin-top: 20px;
 }
+
 #checkbox {
-    margin-top: 10px;
     margin-left: 20px;
+    margin-top: 10px;
 }
+
 #message-box {
     margin-left: 15px;
 }
+
 #priority-class {
     margin-left: 15px;
 }
+
 a {
   float: right;
   color: grey;
@@ -141,28 +163,34 @@ Buttons
     margin-top: 50px;
     margin-bottom: 25px;
 }
+
 #button {
     margin-top: 25px;
 }
 #message {
     margin-top: 435px;
 }
+
 #text {
     margin-top: 200px;
 }
+
 h1 {
   font-size: 36px;
   line-height: 44px;
   margin: auto;
   text-align: center;
 }
+
 h2 {
   font-size: 24px;
   line-height: 44px;
 }
+
 p{
     color: white;
 }
+
 #sign {
     background: linear-gradient(#49708f, #293f50);
     border: 0;
@@ -172,33 +200,44 @@ p{
     float: left;
     padding: 8px 16px;
   }
+
 #userlist-form {
     background:#ECE8E7;
     height:300px;
     margin-top: 20px;
     overflow: auto;
 }
+
 #group-form {
     height:300px;
     overflow: auto;
 }
+
 #MessageForm {
     margin-top:50px;
 }
+
 #message-display {
-    margin-top: -1px;
-    margin-left: 16px;
     height: 490px;
-    overflow: auto;
+    margin-left: 16px;
+    margin-top: -1px;
     width: 595px;
+    overflow: auto;
 }
+
 #modal-button {
     margin-top: -15px;
 }
+
 #style-group {
     color: red;
     
 }
+
+#message-text {
+    color: #00008b
+}
+
 .register {
   border-radius: 4px;
   background-color:greenyellow;
