feature(cursor-pointer): implement cursor pointer
- add cursor pointer for on hover and click group

[Finishes ]

--- a/client/app/js/css/style.css
+++ b/client/app/js/css/style.css
@@ -225,8 +225,7 @@ p{
 }
 
 #style-group {
-    color: red;
-    
+    cursor: pointer;
 }
 #member-list{
     color: #797983
@@ -234,6 +233,7 @@ p{
 #message-text {
     color: #00008b
 }
+
 
 
 .register {
