--- a/client/app/js/css/style.css
+++ b/client/app/js/css/style.css
@@ -274,3 +274,16 @@ p{
   opacity: 1;
   right: 0;
 }
+
+.brand-header {
+  padding-top: 6px;
+}
+
+.navbar-brand {
+    padding-top: 0 !important;
+}
+
+.message-icon {
+  padding-top: 11px;
+  padding-left: 5px;
+}
