--- a/client/app/css/style.scss
+++ b/client/app/css/style.scss
@@ -98,7 +98,7 @@ after {
   }
   
   #messageboard {
-    height: 130px;
+    height: 18.5vh;
     margin-left: -15px;
     margin-right: -15px;
   }
@@ -268,19 +268,19 @@ after {
   }
   
   #background {
-    background-image: url("../css/postitbg.png");
+    background-image: url("../../../template/postitbg.png");
     background-repeat: no-repeat;
     background-size: cover;
     .container-fluid {
       margin-top: -20px;
       padding-top: 15px;
-      padding-bottom: 20px;      
+      margin-bottom: 20px;      
       background-color: rgba(0, 0, 0, 0.5);
     }
   }
   
   @media screen and (max-width: 480px) {
-    #signin, #signin, #resetpassword {
+    #signin, #signin, #resetpassword, #message-display   {
       width: 100%;
       margin: 0;
       border: 5px;
