chore(server test): update server test
- write more tests for controllers

--- a/client/app/css/style.scss
+++ b/client/app/css/style.scss
@@ -3,7 +3,7 @@ html, #app, .wrapper, main, #background, .container-fluid, .container{
   width: 100%;
 }
 body {
-  background: #f0f0f0!important;
+  background: #293f50;
   color: #888;
   font-family: "Roboto", sans-serif;;
 }
